POJ/test.txt
3040.cpp:13:1: error: unknown type name 'error'
error
^
3040.cpp:15:1: error: expected unqualified-id
int main() {
^
2 errors generated.
3040.cpp:31:21: error: no member named 'sefond' in 'std::__1::pair<int, int>';
      did you mean 'second'?
        if(coins[i].sefond - use[i] > 0) {
                    ^~~~~~
                    second
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/utility:254:9: note:
      'second' declared here
    _T2 second;
        ^
3040.cpp:32:54: error: expected ';' at end of declaration
            int next_remain = remain - coins[i].first
                                                     ^
                                                     ;
3040.cpp:84:18: error: expected ';' after break statement
            break
                 ^
                 ;
3 errors generated.
